samples/_failures_safe/1761612101_a1e4b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d29530f.c: In function ‘main’:
./samples/SAFE/__tmp_0d29530f.c:153:21: error: expected expression at end of input
  153 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_0d29530f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d29530f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d29530f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d29530f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d29530f.c:153:21: error: expected declaration or statement at end of input
